--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 
-<h1>I love you enough to fight for you,</h1>
+<h1>I love you enough to fight for you,
 <br>compromise for you, and sacrifce
 <br>myself for you if need be. Enough to
 <br>miss you incredibly when we're apart,
@@ -25,6 +25,7 @@
 <br>
 
 <br>I love you so much
+</h1>
 </body>
 
 </html>
