--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
 <body>
 
-
+<table>
+<tr>
+<td>
 <h1>I love you enough to fight for you,
 <br>compromise for you, and sacrifce
 <br>myself for you if need be. Enough to
@@ -26,6 +28,12 @@
 
 <br>I love you so much
 </h1>
+</td>
+<td>
+<img src="C:\Users\TsholediSebati\Downloads\Github\Tsholedi-byte.github.io\waka.png">
+</td>
+
+</table>
 </body>
 
 </html>
