--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </h1>
 </td>
 <td>
-<img src="C:\Users\TsholediSebati\Downloads\Github\Tsholedi-byte.github.io\waka.PNG" width="500" height="500">
+<img src="C:\Users\TsholediSebati\Downloads\Github\Tsholedi-byte.github.io\waka.png" width="500" height="500">
 </td>
 
 </table>
